# main

./: .gitignore  .prettierrc  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
shared/services-rs/: Cargo.toml
shared/services-rs/game/: Cargo.toml  lib.rs
shared/services-rs/player/: Cargo.toml
shared/services-rs/src/: dynamo.rs  lib.rs
shared/services-rs/src/game/: mod.rs
shared/services-rs/src/player/: errors.rs  mod.rs  structs.rs
stacks/: cdk.json  package-lock.json  package.json
stacks/lib/: dynamodb.ts  main-stack.ts
