[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.49.0"
serde = "1.0.145"
aws-sdk-dynamodb = "0.19.0"
tokio = { version = "1.21.2", features = ["full"] }
uuid = { version = "1.2.1", features = ["v4"] }
lazy_static = "1.4.0"
async_once = "0.2.6"

[features]
player = []
game = []
dynamo = []
